--- a/bower.json
+++ b/bower.json
@@ -23,8 +23,7 @@
   ],
   "dependencies": {
     "angular": "1.5.7",
-    "auth0-js": "^9.0.0",
-    "auth0-lock": "^11.15.0",
-    "keycloak-js": "^5.0.0"
+    "auth0-lock": "^11.16.0",
+    "auth0.js": "^9.10.2"
   }
 }
